Adjusting the dropdown menus from overlapping adjacent arrows. Fixes #50

--- a/source/css/_objects.navs.scss
+++ b/source/css/_objects.navs.scss
@@ -119,6 +119,10 @@ $slice-height: 3;
 }
 .primary-nav__list-item {
   position: relative;
+  @include media('>xlarge') {
+    margin-left: rem(2);
+    margin-right: rem(2);
+  }
 }
 .primary-nav__link {
   display: block;
@@ -128,11 +132,10 @@ $slice-height: 3;
   @include media('<=medium') {
     font-size: rem(22);
   }
-
   @include media('>xlarge') {
     font-size: rem(17);
-    padding-left: rem(15);
-    padding-right: rem(15);
+    padding-left: rem(13);
+    padding-right: rem(13);
   }
 }
 .primary-nav--with-subnav {
@@ -153,7 +156,7 @@ $slice-height: 3;
       border-right: rem(4) solid transparent;
       border-top: rem(4) solid rgba($black, .6);
       position: absolute;
-      right: 0;
+      right: rem(2);
       top: calc(50%);
       transform: translate(0, -50%);
       .rtl & {
